--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:id="@+id/main_tabs"
             android:background="@color/green"
             app:tabSelectedTextColor="@color/white"
+            app:tabIndicatorColor="@color/white"
             >
 
         </com.google.android.material.tabs.TabLayout>
