Able to display request from database

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="green">#006600</color>
     <color name="alabaster">#EDEADE</color>
     <color name="blue">#3151AA</color>
+    <color name="red">#D81020</color>
+
 </resources>
