--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactFragment">
+    tools:context=".RequestFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvContactFragment"
+        android:id="@+id/rvRequestFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
 
 
 </RelativeLayout>
