--- a/app/src/main/res/layout/users_display.xml
+++ b/app/src/main/res/layout/users_display.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/picUsersDisplay"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_baseline_person_24"
                 android:layout_marginTop="20dp"/>
 
             <LinearLayout
@@ -56,6 +56,39 @@
                     android:singleLine="true"
                     android:textSize="20sp"
                     android:textColor="@color/black"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnAcceptUserDisplay"
+                        android:layout_width="90dp"
+                        android:layout_height="30dp"
+                        android:text="Accept"
+                        android:background="@color/green"
+                        android:layout_marginStart="5dp"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:visibility="invisible"
+                        android:textAllCaps="false"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnDeclineUserDisplay"
+                        android:layout_width="90dp"
+                        android:layout_height="30dp"
+                        android:text="Decline"
+                        android:visibility="invisible"
+                        android:background="@color/red"
+                        android:layout_marginStart="20dp"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textAllCaps="false"/>
+
+
+                </LinearLayout>
 
 
 
